# obsrm

./: .coverage  .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yaml  sync.yaml
examples/: sync-remarkable.yaml
src/obsidian_remarkable_sync/: cli.py  config.py  converter.py  markdown_processor.py  pull.py  remarkable.py  rm_extract.py  sync_state.py  vault.py
src/obsrm/: cli.py  config.py  converter.py  markdown_processor.py  pull.py  sync_service.py  sync_state.py  vault.py
src/obsrm/filters/: obsidian.lua
src/obsrm/styles/: preamble.tex  remarkable.css
tests/: test_cleanup_folders.py  test_cli.py  test_config.py  test_converter.py  test_markdown_processor.py  test_pull.py  test_pull_notebook.py  test_remarkable.py  test_rm_extract.py  test_sync_state.py  test_vault.py
tests/fixtures/sample_vault/: note1.md  note2.md  note_with_callouts.md  note_with_images.md
tests/fixtures/sample_vault/.hidden/: secret.md
tests/fixtures/sample_vault/.obsidian/: workspace.json
tests/fixtures/sample_vault/subfolder/: note3.md
